[package]
name = "oxideav-evc"
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-evc"
authors = ["Mark Karpeles"]
description = "Pure-Rust EVC (MPEG-5 Essential Video Coding, ISO/IEC 23094-1) decoder. Baseline profile: IDR/P/B slices, 8-bit 4:2:0 pixel decode (residual, intra, inter, deblocking, multi-reference DPB); Main-profile CABAC infrastructure in progress."

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-evc"
keywords = ["multimedia", "video", "evc", "mpeg5", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
